--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -1,4 +1,38 @@
+.w-100{
+  width: 100%;
+}
+.h-100{
+  height: 100%;
+}
 .yt {
   pointer-events: none;
   border-radius: 10px;
+}
+.planeWrap{
+  .handle{
+    z-index: 3;
+    border: none;
+    background: transparent;
+    &-tl, &-tm, &-tr{
+      top: 0;
+    }
+    &-bt, &-bm, &-bl, &-br{
+      bottom: 0;
+    }
+    &-tl, &-bl, &-ml{
+      left: 0;
+    }
+    &-tr, &-mr, &-bt, &-br{
+      right: 0;
+    }
+  }
+}
+.videoWrap{
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 1;
+  margin: 16px;
 }
