--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -1,3 +1,21 @@
+.base-bg{
+  background-color: #F0F0F0;
+}
+.base-bg-darker{
+  background-color: #D9D9D9;
+}
+.base-border-color{
+  border-color: #C6C6C6;
+}
+.base-font-gray{
+  color: #606060;
+}
+.base-font-gray-lighter{
+  color: #A4A4A4;
+}
+.text-super-xs{
+  font-size: 0.625rem;
+}
 .w-100{
   width: 100%;
 }
